profile-view-add-active-class-add-update-role-popup-and-mobile-responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,9 +67,9 @@
     <div class="row">
 
         <div class="d-lg-none d-xl-none col-xs-12">
-            <a href="javascript:void(0)" class="mx-auto d-flex justify-content-center flex-wrap">
+            <!--<a href="javascript:void(0)" class="mx-auto d-flex justify-content-center flex-wrap">
                 <img src="assets/images/avatars/avatar.png" class="img-responsive text-center mx-auto d-flex justify-content-center flex-wrap"/>
-            </a>
+            </a>-->
         </div>
 
 
