--- a/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
@@ -50,25 +50,91 @@
 
 
 <form [formGroup]="roleTemplateForm">
-  <a href="javascript:void(0);" class="lg-fa float-right">
-    <i class="fa fa-plus"></i>
-  </a>
-  <div *ngFor="let role of roles">
-    <table class="table">
-      <tbody class="box-shadow">
-      <tr>
-        <td></td>
-        <td>
-          <a href="javascript:void(0);" class="lg-fa float-right">
-            <i class="fa fa-pencil-square-o"></i>
-          </a>
-        </td>
-      </tr>
-      <tr class="info" *ngFor="let displayProperty of displayProperties">
-        <!--<td>{{displayProperty.displayLabel}} </td>-->
-        <td>{{displayProperty.displayLabel}} </td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+    <a href="javascript:void(0);" class="lg-fa float-right" (click)="open(content)">
+        <i class="fa fa-plus"></i>
+    </a>
+    <ng-template #content let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Role</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="form-group">
+                    <label for="startdate">Start Date</label>
+                    <div class="input-group">
+                        <input id="startdate" class="form-control" placeholder="yyyy-mm-dd">
+                    </div>
+
+                    <label for="endDate">End Date</label>
+                    <div class="input-group">
+                        <input id="endDate" class="form-control" placeholder="yyyy-mm-dd">
+                    </div>
+
+                    <label for="district">District</label>
+                    <div class="input-group">
+                        <input id="district" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="chamber">Chamber</label>
+                    <div class="input-group">
+                        <input id="chamber" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="state">State</label>
+                    <div class="input-group">
+                        <input id="state" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="party">Party</label>
+                    <div class="input-group">
+                        <input id="party" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="member">Member</label>
+                    <div class="input-group">
+                        <input id="member" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="committee">Committee</label>
+                    <div class="input-group">
+                        <input id="committee" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="position">Position</label>
+                    <div class="input-group">
+                        <input id="position" class="form-control" placeholder="">
+                    </div>
+
+                    <label for="type">Type</label>
+                    <div class="input-group">
+                        <input id="type" class="form-control" placeholder="">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-outline-success" (click)="modal.close('Save click')">Save</button>
+        </div>
+    </ng-template>
+    <div *ngFor="let role of roles">
+        <table class="table">
+            <tbody class="box-shadow">
+            <tr>
+                <td></td>
+                <td>
+                    <a href="javascript:void(0);" class="lg-fa float-right" (click)="open(content)">
+                        <i class="fa fa-pencil-square-o"></i>
+                    </a>
+                </td>
+            </tr>
+            <tr class="info" *ngFor="let displayProperty of displayProperties">
+                <!--<td>{{displayProperty.displayLabel}} </td>-->
+                <td>{{displayProperty.displayLabel}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </form>
