--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,6 +108,7 @@
 
             <router-outlet></router-outlet>
 
+            <ckeditor data="<p>Hello, world!</p>" (change)="onChange($event)"></ckeditor>
 
         </div>
         <!-- /.col-lg-6 -->
