--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -1,209 +1,151 @@
-<div class="central-meta item">
-	<div class="user-post">
-		<div class="friend-info">
-			<figure>
-				<!--IMAGE OF ENTITY WHO POSTED THIS POST
-				<img src="assets/images/yeoman.png" alt="">-->
-				<img [src]="profileSmImage" alt="">
-			</figure>
-			<div class="friend-name">
-				<!--clicking this link will navigate to Entity profile-->
-				<ins><a href="#" title="">{{post.entityId}}</a></ins>
-				<span>published: {{post.createdDate | dateFormatPipe}}</span>
-			</div>
-			<div *ngIf="post.containsImage" class="post-meta">
-					<!-- Show image only if post contains an image -->
-					<img [src]="postImage" alt="">
-			</div>
-			<div *ngIf="post.containsVideo" class="post-meta">
-				<div class="we-video-info">
+<!--<div class="central-meta item">
+    <div class="user-post">
+        <div class="friend-info">
+            <figure>
+                <img [src]="profileSmImage" alt="">
+            </figure>
+            <div class="friend-name">
+                <ins><a href="#" title="">{{post.entityId}}</a></ins>
+                <span>published: {{post.createdDate | dateFormatPipe}}</span>
+            </div>
+            <div *ngIf="post.containsImage" class="post-meta">
+                <img [src]="postImage" alt="">
+            </div>
+            <div *ngIf="post.containsVideo" class="post-meta">
+                <div class="we-video-info">
 
-				</div>
-			</div>
-			<!-- Post text -->
-			<div *ngIf="post.containsText" class="description">
-					<p>
-						{{post.postText}}
-					</p>
-			</div>
-			<div class="post-meta">
-					<div class="we-video-info">
-						<ul>
-							<li>
-								<span class="views" data-toggle="tooltip" title="views">
-									<i class="fa fa-eye"></i>
-									<ins>1.2k</ins>
-								</span>
-							</li>
-							<li>
-								<span class="comment" data-toggle="tooltip" title="Comments">
-									<i class="fa fa-comments-o"></i>
-									<ins>52</ins>
-								</span>
-							</li>
-							<li>
-								<span class="like" data-toggle="tooltip" title="like">
-									<i class="ti ti-heart"></i>
-									<ins>2.2k</ins>
-								</span>
-							</li>
-							<li>
-								<span class="dislike" data-toggle="tooltip" title="dislike">
-									<i class="ti ti-heart-broken"></i>
-									<ins>200</ins>
-								</span>
-							</li>
-								<!--
-								<li class="social-media">
-									<div class="menu">
-									  <div class="btn trigger"><i class="fa fa-share-alt"></i></div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-html5"></i></a></div>
-									  </div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-facebook"></i></a></div>
-									  </div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-google-plus"></i></a></div>
-									  </div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-twitter"></i></a></div>
-									  </div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-css3"></i></a></div>
-									  </div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-instagram"></i></a>
-										</div>
-									  </div>
-										<div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-dribbble"></i></a>
-										</div>
-									  </div>
-									  <div class="rotater">
-										<div class="btn btn-icon"><a href="#" title=""><i class="fa fa-pinterest"></i></a>
-										</div>
-									  </div>
+                </div>
+            </div>
+            <div *ngIf="post.containsText" class="description">
+                <p>
+                    {{post.postText}}
+                </p>
+            </div>
+            <div class="post-meta">
+                <div class="we-video-info">
+                    <ul>
+                        <li>
+                            <a href="javascript:void(0);" class="card-link"><i class="fa fa-gittip"></i> Like</a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" class="card-link"><i class="fa fa-comment"></i> Comment</a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" class="card-link"><i class="fa fa-mail-forward"></i> Share</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-									</div>
-								</li>
-							-->
+        </div>
+        <div *ngIf="post.comments" class="coment-area">
+            <ul class="we-comet">
+                <li *ngFor="let comment of post.comments">
+                    <app-postcard [post]=comment></app-postcard>
+                </li>
+            </ul>
+            <div class="coment-area">
+                <ul class="we-comet">
+                    <li>
+                        <a href="#" title="" class="showmore underline" (click)="loadMoreComments(post.id)">more
+                            comments</a>
+                    </li>
+                </ul>
+            </div>
 
-						</ul>
-					</div>
-			</div>
+        </div>
+    </div>
+</div>-->
 
-		</div>
-		<!--POST COMMENTS - START-->
-		<div *ngIf="post.comments" class="coment-area">
-			<ul class="we-comet">
-				<li *ngFor="let comment of post.comments">
-					<app-postcard [post]=comment></app-postcard>
-				</li>
-				<!--
-				<li>
 
-					<div class="comet-avatar">
-						<img src="assets/images/yeoman.png" alt="">
-					</div>
-					<div class="we-comment">
-						<div class="coment-head">
+<div class="card gedf-card">
+    <div class="card-header">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="mr-2">
+                    <img class="rounded-circle" width="45" [src]="profileSmImage" alt="User Profile">
+                </div>
+                <div class="ml-2">
+                    <div class="h5 m-0">
+                        <a href="javascript:void(0);">
+                            {{post.entityId}}
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="dropdown">
+                    <div class="btn-group">
+                        <div ngbDropdown class="d-inline-block">
+                            <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false" id="postRightDropdown" ngbDropdownToggle>
+                                <i class="{{ icon }}"></i> {{ name }}
+                                <i class="fa fa-ellipsis-h"></i>
+                            </button>
+                            <div ngbDropdownMenu aria-labelledby="postRightDropdown">
+                                <button class="btn btn-outline-success" ngbDropdownItem (click)="save('Saved')"
+                                        [ngClass]="{ 'active': savePost, 'in-active': !savePost}"><i
+                                        class="fa fa-floppy-o" aria-hidden="true"></i> Save
+                                </button>
+                                <button class="btn btn-outline-warning" ngbDropdownItem (click)="hide('Hide')"
+                                        [ngClass]="{ 'active': hidePost, 'in-active': !hidePost}"><i
+                                        class="fa fa-eye-slash" aria-hidden="true"></i> Hide
+                                </button>
+                                <button class="btn btn-outline-danger" ngbDropdownItem (click)="report('Report')"
+                                        [ngClass]="{ 'active': reportPost, 'in-active': !reportPost}"><i
+                                        class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report
+                                </button>
+                            </div>
+                        </div>
 
-							<h5><a href="#" title="">Jason borne</a></h5>
-							<span>1 year ago</span>
-							<a class="we-reply" href="#" title="Reply"><i class="fa fa-reply"></i></a>
-						</div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-						<p>we are working for the dance and sing songs. this car is very awesome for the youngster. please vote this car and like our post</p>
-					</div>
-					<ul>
-						<li>
-							<div class="comet-avatar">
-								<img src="assets/images/yeoman.png" alt="">
-							</div>
-							<div class="we-comment">
-								<div class="coment-head">
-									<h5><a href="time-line.html" title="">alexendra dadrio</a></h5>
-									<span>1 month ago</span>
-									<a class="we-reply" href="#" title="Reply"><i class="fa fa-reply"></i></a>
-								</div>
-								<p>yes, really very awesome car i see the features of this car in the official website of <a href="#" title="">#Mercedes-Benz</a> and really impressed :-)</p>
-							</div>
-						</li>
-						<li>
-							<div class="comet-avatar">
-								<img src="assets/images/yeoman.png" alt="">
-							</div>
-							<div class="we-comment">
-								<div class="coment-head">
-									<h5><a href="time-line.html" title="">Olivia</a></h5>
-									<span>16 days ago</span>
-									<a class="we-reply" href="#" title="Reply"><i class="fa fa-reply"></i></a>
-								</div>
-								<p>i like lexus cars, lexus cars are most beautiful with the awesome features, but this car is really outstanding than lexus</p>
-							</div>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<div class="comet-avatar">
-						<img src="assets/images/yeoman.png" alt="">
-					</div>
-					<div class="we-comment">
-						<div class="coment-head">
-							<h5><a href="time-line.html" title="">Donald Trump</a></h5>
-							<span>1 week ago</span>
-							<a class="we-reply" href="#" title="Reply"><i class="fa fa-reply"></i></a>
-						</div>
-						<p>we are working for the dance and sing songs. this video is very awesome for the youngster. please vote this video and like our channel
-							<i class="em em-smiley"></i>
-						</p>
-					</div>
-				</li>
+    </div>
+    <div class="card-body">
+        <div class="text-muted h7 mb-2">
+            <i class="fa fa-clock-o"></i>
+            published: {{post.createdDate | dateFormatPipe}}
+        </div>
 
-				<li>
-					<a href="#" title="" class="showmore underline">more comments</a>
-				</li>
+        <div *ngIf="post.containsImage" class="post-meta">
+            <img [src]="postImage" alt="">
+        </div>
 
-				<li class="post-comment">
-					<div class="comet-avatar">
-						<img src="assets/images/yeoman.png" alt="">
-					</div>
-					<div class="post-comt-box">
-						<form method="post">
-							<textarea placeholder="Post your comment"></textarea>
-							<div class="add-smiles">
-								<span class="em em-expressionless" title="add icon"></span>
-							</div>
-							<div class="smiles-bunch">
-								<i class="em em---1"></i>
-								<i class="em em-smiley"></i>
-								<i class="em em-anguished"></i>
-								<i class="em em-laughing"></i>
-								<i class="em em-angry"></i>
-								<i class="em em-astonished"></i>
-								<i class="em em-blush"></i>
-								<i class="em em-disappointed"></i>
-								<i class="em em-worried"></i>
-								<i class="em em-kissing_heart"></i>
-								<i class="em em-rage"></i>
-								<i class="em em-stuck_out_tongue"></i>
-							</div>
-							<button type="submit"></button>
-						</form>
-					</div>
-				</li>
-			-->
-			</ul>
-			<div class="coment-area">
-				<ul class="we-comet">
-					<li>
-						<a href="#" title="" class="showmore underline" (click)="loadMoreComments(post.id)">more comments</a>
-					</li>
-				</ul>
-			</div>
+        <div *ngIf="post.containsVideo" class="post-meta">
+            <div class="we-video-info">
 
-		</div>
-		<!--POST COMMENTS - END-->
-	</div>
+            </div>
+        </div>
+        <div *ngIf="post.containsText" class="description">
+            <p class="card-text">
+                {{post.postText}}
+            </p>
+        </div>
+    </div>
+    <div class="card-footer">
+        <div class="row post-card-footer">
+            <!--<div class="col">-->
+                <a href="javascript:void(0);" class="col card-link post-footer-btn text-center" (click)="like($event)">
+                    <i class="fa fa-thumbs-up custom-size" aria-hidden="true"></i>
+                     Like
+                </a>
+            <!--</div>-->
+            <!--<div class="col">-->
+                <a href="javascript:void(0);" class="col card-link post-footer-btn text-center">
+                    <i class="fa fa-comment custom-size"></i>
+                    Comment
+                </a>
+            <!--</div>-->
+            <!--<div class="col">-->
+                <a href="javascript:void(0);" class="col card-link post-footer-btn text-center">
+                    <i class="fa fa-mail-forward custom-size"></i>
+                    Share
+                </a>
+            <!--</div>-->
+        </div>
+    </div>
 </div>
+<br/>
