--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,12 @@
 <app-newpost *ngIf="!disableNewPost"></app-newpost>
 
-<app-postcard [post]=post *ngFor="let post of posts"></app-postcard> 
+
+<div class="card gedf-card">
+    <cdk-virtual-scroll-viewport style="height: 550px" itemSize="90">
+        <app-postcard [post]=post *cdkVirtualFor="let post of posts">
+        </app-postcard>
+    </cdk-virtual-scroll-viewport>
+</div>
+
+
+<!--<app-postcard [post]=post *ngFor="let post of posts"></app-postcard>-->
