--- a/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
@@ -94,7 +94,9 @@
         </div>
     </ng-template>
     <div *ngFor="let role of roles">
-        <table class="table">
+      <app-userrole [role]="role" [displayProperties]="displayProperties"></app-userrole>
+      <!--  
+      <table class="table">
             <tbody class="box-shadow">
             <tr>
                 <td></td>
@@ -110,5 +112,6 @@
             </tr>
             </tbody>
         </table>
+      -->
     </div>
 </form>
