--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -12,8 +12,9 @@
             <div class="text-center user-profile-2" style="margin-top:120px">
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <h4><b>{{firstName}} {{lastName}} </b></h4>
-                        <!--<h5>Administrator</h5>-->
+                        <h4><b>{{biodata.full_name}}</b></h4>
+                        <h5>{{biodata.party}}</h5>
+                        <h5>{{biodata.district}}, {{biodata.chamber}}, {{biodata.state}}</h5>
                     </li>
                     <li class="list-group-item pointer" (click)="Followers()"
                         [ngClass]="{ 'active': folowers, 'in-active': !folowers}">
@@ -21,11 +22,12 @@
               {{followersCount}} Followers
             </span>
                     </li>
-                    <li class="list-group-item pointer" (click)="FollowingCount()"
+<!--                    <li class="list-group-item pointer" (click)="FollowingCount()"
                         [ngClass]="{ 'active': folow, 'in-active': !folow}">
                         <span class="badge">245</span>
                         <span class="">Following</span>
                     </li>
+                    -->
                     <li class="list-group-item pointer" (click)="isProfileCollapsed=true; isActivityCollapsed=false;"
                         (click)="Activities()" [ngClass]="{ 'active': activitiesData, 'in-active': !activitiesData}">
                         <span class="pointer">Activities</span>
@@ -58,7 +60,6 @@
                                         </div>
                                         <div id="FollowersCollapse" [ngbCollapse]="isFollowersCollapsed"
                                              class="widget stick-widget">
-                                            <h4 class="widget-title">Followers</h4>
                                             <ul class="followers">
                                                 <li *ngFor="let followingUser of followers">
                                                     <app-usercard1 [user]=followingUser></app-usercard1>
