--- a/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
@@ -51,7 +51,7 @@
 
 <form [formGroup]="rolesTemplateForm">
     <!-- Add new role -->
-    <a href="javascript:void(0);" class="lg-fa float-right" (click)="open(content, '')"> 
+    <a *ngIf="inEditMode" href="javascript:void(0);" class="lg-fa float-right" (click)="open(content, '')"> 
         <i class="fa fa-plus"></i>
     </a>
     <ng-template #content let-modal>
