--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-3 avatar-container">
         <img [src]="profileSmImage" class="twPc-avatarImg img-circle profile-avatar"
              *ngIf="!isImageLoading" alt="User avatar">
-        <div class="edit-phto" *ngIf="inEditMode">
+        <div class="card edit-photo" *ngIf="inEditMode">
             <i class="fa fa-camera-retro"></i>
             <label class="fileContainer">
                 Add/Change Profile Picture
@@ -17,12 +17,23 @@
     <div class="row">
         <div class="col-sm-3">
             <!-- Begin user profile -->
-            <div class="text-center user-profile-2" style="margin-top:220px">
+            <div class="text-center user-profile-2" style="margin-top:120px">
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <h4><b>{{biodata.full_name}}</b></h4>
-                        <h5>{{biodata.party}}</h5>
-                        <h5>{{biodata.district}}, {{biodata.chamber}}, {{biodata.state}}</h5>
+                        <h4>
+                            <b>
+                                {{biodata.full_name}}
+                            </b>
+                        </h4>
+                        <h5>
+                            <a [routerLink]="['/party', biodata.party]">
+                                {{biodata.party}}
+                            </a>
+                        </h5>
+                        <h5>
+                            <a [routerLink]="['/district', biodata.district]">{{biodata.district}}</a>, 
+                            <a [routerLink]="['/chamber', biodata.chamber]">{{biodata.chamber}}</a>, 
+                            <a [routerLink]="['/state', biodata.state]">{{biodata.state}}</a></h5>
                     </li>
                     <li class="list-group-item pointer" (click)="Followers()"
                         [ngClass]="{ 'active': folowers, 'in-active': !folowers}">
