--- a/src/app/components/user/usertemplate/userroletemplate/userrole/userrole.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userrole/userrole.component.html
@@ -1,6 +1,6 @@
 <table class="table">
   <tbody class="box-shadow">
-  <tr>
+  <tr *ngIf="inEditMode">
       <td></td>
       <td>
           <a href="javascript:void(0);" class="lg-fa float-right" (click)="open(content, role)">
@@ -20,7 +20,7 @@
         <h4 class="modal-title" id="modal-basic-title">Role</h4>
         <!-- Close the Role modal-->
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true">&times;</span> 
         </button>
     </div>
     <div class="modal-body">
